Adds table row and table data; Adds comment titles for readability

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -34,6 +34,18 @@
                 <td>Table Body</td>
                 <td>Contains the body of the table</td>
             </tr>
+            <!-- table row-->
+             <tr>
+                <td>&lt;tr&gt;</td>
+                <td>Table row</td>
+                <td>Creates a row in the table and contains the data within the row.</td>
+             </tr>
+             <!-- table data-->
+              <tr>
+                <td>&lt;td&gt;</td>
+                <td>Table Data</td>
+                <td>Contains the data within the table.</td>
+              </tr>
 
         </tbody>
     </table>
