--- a/pages/tables.html
+++ b/pages/tables.html
@@ -46,6 +46,12 @@
                 <td>Table Data</td>
                 <td>Contains the data within the table.</td>
               </tr>
+              <!-- table foot-->
+               <tr>
+                <td>&lt;tfoot&gt;</td>
+                <td>Table Foot</td>
+                <td>Creates the row in the footer of the table.</td>
+               </tr>
 
         </tbody>
     </table>
