Adds comment title for table attributes; adds header and table; adds table attribute table headers

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -14,7 +14,7 @@
         <th>Tag</th>
         <th>Name</th>
         <th>Description</th>
-        <!-- Table body ----->
+        <!-- Table Body Table --------------->
         <tbody>
             <!-- table ---->
                 <tr>
@@ -52,8 +52,14 @@
                 <td>Table Foot</td>
                 <td>Creates the row in the footer of the table.</td>
                </tr>
-
         </tbody>
+    </table>
+    <!--Table Attributes Table------------>
+    <h2>Table Attributes</h2>
+    <table>
+        <th>Attribute</th>
+        <th>Name</th>
+        <th>Description</th>
     </table>
 </body>
 </html>
