adds colspan, rowspan, and comment titles for readability

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -8,13 +8,13 @@
 <body>
     <h1>HTML Table Reference</h1>
     <h2>Table Tags</h2>
-    <!-- Table ----------->
+    <!-- Table Body Table-------------------->
     <table>
         <!-- table headers ---------->
         <th>Tag</th>
         <th>Name</th>
         <th>Description</th>
-        <!-- Table Body Table --------------->
+        <!-- table body-------------->
         <tbody>
             <!-- table ---->
                 <tr>
@@ -54,12 +54,28 @@
                </tr>
         </tbody>
     </table>
-    <!--Table Attributes Table------------>
+    <!--Table Attributes Table------------------->
     <h2>Table Attributes</h2>
     <table>
+        <!-- table attributes headers-->
         <th>Attribute</th>
         <th>Name</th>
         <th>Description</th>
+        <!-- table attributes body-->
+        <tbody>
+            <!-- colspan-->
+            <tr>
+                <td>colspan</td>
+                <td>Column Span</td>
+                <td>Defines the number of columns td will fill.</td>
+            </tr>
+            <!-- rowspan-->
+            <tr>
+                <td>rowspan</td>
+                <td>Row Span</td>
+                <td>Defines the number of rows a td will fill.</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
