Creates main element with class 'flex'; Adds nav for left side and div for right side of main; Adds link to tables page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Web Dev Cheet Sheet by Augustine and Community</h1>
+    <main class="flex">
+        <nav>
+            <a href="/pages/tables.html">Tables</a>
+        </nav>
+        <div>
+            <img src="" alt="">
+        </div>
+    </main>
 </body>
 </html>
