Deletes current stylesheet content; replaces with reusable classes; Centers all items, changes all text, but the h1 to darkblue; Creates radial-gradient background

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -6,11 +6,11 @@
     <title>HTML Tables</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
-    <h1>HTML Table Reference</h1>
+<body class="zero centerText blueFont backgroundRedGray">
+    <h1 class="blackFont">HTML Table Reference</h1>
     <h2>Table Tags</h2>
     <!-- Table Body Table-------------------->
-    <table>
+    <table class="center">
         <!-- table headers ---------->
         <th>Tag</th>
         <th>Name</th>
@@ -57,7 +57,7 @@
     </table>
     <!--Table Attributes Table------------------->
     <h2>Table Attributes</h2>
-    <table>
+    <table class="center">
         <!-- table attributes headers-->
         <th>Attribute</th>
         <th>Name</th>
