Changes body background to gray radial gradient, ellipse at bottom; Adds light blue background to table headers; adds white background to tag and attributes;

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -6,73 +6,77 @@
     <title>HTML Tables</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body class="zero centerText blueFont backgroundRedGray">
-    <h1 class="blackFont">HTML Table Reference</h1>
-    <h2>Table Tags</h2>
+<body class="zero centerText radialGrayBack">
+    <h1 class="">HTML Table Reference</h1>
+    <h2 class="blueFont">Table Tags</h2>
     <!-- Table Body Table-------------------->
-    <table class="center">
+    <table class="center eighty-vw blueBorder">
         <!-- table headers ---------->
-        <th>Tag</th>
-        <th>Name</th>
-        <th>Description</th>
+        <thead class="lightBlue">
+            <th class="">Tag</th>
+            <th class="">Name</th>
+            <th class="">Description</th>
+        </thead>
         <!-- table body-------------->
         <tbody>
             <!-- table ---->
                 <tr>
-                <td>&lt;table&gt;</td>
+                <td class="whiteBack">&lt;table&gt;</td>
                 <td>Table</td>
                 <td>Creates a table and contains all table elements.</td>
             </tr>
             <!-- table head-->
             <tr>
-                <td>&lt;thead&gt;</td>
+                <td class="whiteBack">&lt;thead&gt;</td>
                 <td>Table Head</td>
                 <td>Declares the headers/titles of the table.</td>
             </tr>
             <!-- table body-->
             <tr>
-                <td>&lt;tbody&gt;</td>
+                <td class="whiteBack">&lt;tbody&gt;</td>
                 <td>Table Body</td>
                 <td>Contains the body of the table</td>
             </tr>
             <!-- table row-->
              <tr>
-                <td>&lt;tr&gt;</td>
+                <td class="whiteBack">&lt;tr&gt;</td>
                 <td>Table row</td>
                 <td>Creates a row in the table and contains the data within the row.</td>
              </tr>
              <!-- table data-->
               <tr>
-                <td>&lt;td&gt;</td>
+                <td class="whiteBack">&lt;td&gt;</td>
                 <td>Table Data</td>
                 <td>Contains the data within the table.</td>
               </tr>
               <!-- table foot-->
                <tr>
-                <td>&lt;tfoot&gt;</td>
+                <td class="whiteBack">&lt;tfoot&gt;</td>
                 <td>Table Foot</td>
                 <td>Creates the row in the footer of the table.</td>
                </tr>
         </tbody>
     </table>
     <!--Table Attributes Table------------------->
-    <h2>Table Attributes</h2>
-    <table class="center">
+    <h2 class="blueFont">Table Attributes</h2>
+    <table class="center eighty-vw blueBorder">
         <!-- table attributes headers-->
-        <th>Attribute</th>
-        <th>Name</th>
-        <th>Description</th>
+        <thead class="lightBlue">
+            <th>Attribute</th>
+            <th>Name</th>
+            <th>Description</th>
+        </thead>    
         <!-- table attributes body-->
         <tbody>
             <!-- colspan-->
             <tr>
-                <td>colspan</td>
+                <td class="whiteBack">colspan</td>
                 <td>Column Span</td>
                 <td>Defines the number of columns td will fill.</td>
             </tr>
             <!-- rowspan-->
             <tr>
-                <td>rowspan</td>
+                <td class="whiteBack">rowspan</td>
                 <td>Row Span</td>
                 <td>Defines the number of rows a td will fill.</td>
             </tr>
