Changed centerText to h1 and h2 tags, rather than body

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -6,9 +6,9 @@
     <title>HTML Tables</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body class="zero centerText radialGrayBack">
-    <h1 class="">HTML Table Reference</h1>
-    <h2 class="blueFont">Table Tags</h2>
+<body class="zero radialGrayBack">
+    <h1 class="centerText">HTML Table Reference</h1>
+    <h2 class="blueFont centerText">Table Tags</h2>
     <!-- Table Body Table-------------------->
     <table class="center eighty-vw blueBorder">
         <!-- table headers ---------->
@@ -58,7 +58,7 @@
         </tbody>
     </table>
     <!--Table Attributes Table------------------->
-    <h2 class="blueFont">Table Attributes</h2>
+    <h2 class="blueFont centerText">Table Attributes</h2>
     <table class="center eighty-vw blueBorder">
         <!-- table attributes headers-->
         <thead class="lightBlue">
