Adds overflow hidden to body(zero class), adds bottom margin to bottom table

--- a/pages/tables.html
+++ b/pages/tables.html
@@ -59,7 +59,7 @@
     </table>
     <!--Table Attributes Table------------------->
     <h2 class="blueFont centerText">Table Attributes</h2>
-    <table class="center eighty-vw blueBorder">
+    <table class="center eighty-vw blueBorder bMargin">
         <!-- table attributes headers-->
         <thead class="lightBlue">
             <th>Attribute</th>
